Build out pages

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 </div>
                 <div class="menu-sidebar__footer">
                     <div class="copyright">
-                        <p>©2023 PLS MECHANICAL</p>
+                        <p>©2023 PLS Mechanical</p>
                     </div>
                 </div>
             </aside>
