--- a/indoor-air-quality.html
+++ b/indoor-air-quality.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Tatee Theme Templates">
 
     <!-- Title Page-->
-    <title>Home Vertical Slide</title>
+    <title>Indoor Air Quality</title>
 
     <!-- Icons font CSS-->
     <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
@@ -303,20 +303,20 @@
                     <div class="rev_slider fullwidthabanner js-rev" data-version="5.4.4" style="display:none" data-rev-layout="fullscreen" data-rev-bullets="false" data-rev-arrows="false">
                         <ul>
                             <li class="rev-item rev-item-1" data-transition="crossfade">
-                                <img class="rev-slidebg" src="images/slide-03.jpg" alt="Master Slider 01" />
+                                <img class="rev-slidebg" src="images/PLS-Mechanical-UV-Germicidal-Purifier 1.jpg" alt="Master Slider 01" />
                                 <h4 class="tp-caption tp-resizeme rev-text-1" data-frames="[{&quot;delay&quot;:400,&quot;speed&quot;:1200,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;auto:auto;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                 data-x="['left']" data-y="['middle']" data-hoffset="[0, 0, 0, 0, 0]" data-voffset="[-128, -118, -150, -130, -130]" data-paddingleft="[0, 0, 0, 0, 15]" data-paddingright="[0, 0, 0, 0, 15]" data-width="['auto']" data-height="[&quot;auto&quot;]"
-                                data-whitespace="[nowrap, nowrap, nowrap, nowrap, nowrap]" data-color="#fff" data-fontweight="400" data-fontsize="[11, 11, 14, 16, 16]" data-textalign="[left, left, left, center, center]">we are tatee</h4>
+                                data-whitespace="[nowrap, nowrap, nowrap, nowrap, nowrap]" data-color="#fff" data-fontweight="400" data-fontsize="[11, 11, 14, 16, 16]" data-textalign="[left, left, left, center, center]">Indoor Air Quality</h4>
                                 <h2 class="tp-caption tp-resizeme rev-text-2" data-frames="[{&quot;delay&quot;:0,&quot;speed&quot;:1200,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:-50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;auto:auto;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                 data-x="[left]" data-y="[center]" data-hoffset="[0, 0, 0, 0, 0]" data-voffset="[-45, -40, 0, 0, 0]" data-paddingleft="[0, 0, 0, 0, 15]" data-paddingright="[0, 0, 0, 0, 15]" data-width="[1170, 930, 690, 510, 576]" data-height="[&quot;auto&quot;]"
-                                data-lineheight="[60, 58, 54, 38, 36]" data-whitespace="normal" data-color="#ebebeb" data-fontweight="700" data-fontsize="[48, 42, 46, 32, 32]" data-textalign="[left, left, left, left, left]">Our bulding are inspired by the challenge of balancing function &amp; beauty</h2>
+                                data-lineheight="[60, 58, 54, 38, 36]" data-whitespace="normal" data-color="#ebebeb" data-fontweight="700" data-fontsize="[48, 42, 46, 32, 32]" data-textalign="[left, left, left, left, left]">Germicidal UV</h2>
                                 <p class="tp-caption tp-resizeme" data-frames="[{&quot;delay&quot;:0,&quot;speed&quot;:1200,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;opacity:0;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                 data-x="[left]" data-y="[center]" data-hoffset="[0, 0, 0, 0, 0]" data-voffset="[70, 70, 100, 80, 70]" data-paddingleft="[0, 0, 0, 0, 15]" data-paddingright="[0, 0, 0, 0, 15]" data-width="[800,800,690,510,576]" data-height="[&quot;auto&quot;]"
-                                data-lineheight="[30, 30, 26, 20, 20]" data-whitespace="normal" data-color="#ebebeb" data-fontweight="400" data-fontsize="[13, 13, 14, 15, 15]" data-textalign="[left, left, left, left, left]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut . . .</p>
+                                data-lineheight="[30, 30, 26, 20, 20]" data-whitespace="normal" data-color="#ebebeb" data-fontweight="400" data-fontsize="[13, 13, 14, 15, 15]" data-textalign="[left, left, left, left, left]">Read More.</p>
                                 <a class="tp-caption tp-resizeme"
                                 href="#" target="_self" data-frames="[{&quot;delay&quot;:400,&quot;speed&quot;:1200,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;opacity:0;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                 data-x="[left]" data-y="[center]" data-hoffset="[0, 0, 0, 0, 15]" data-voffset="[185, 185, 210, 180, 170]" data-width="['auto']" data-height="[&quot;auto&quot;]" data-responsive_offset="on" data-responsive="off" data-whitespace="[nowrap, nowrap, nowrap, nowrap, nowrap]">
-                                    <span class="rev-btn-2">Contact now</span>
+                                    <span class="rev-btn-2">PLACEHOLDER</span>
                                 </a>
                             </li>
                         </ul>
@@ -430,7 +430,7 @@
                                 <div class="media__body">
                                     <figure class="media__img">
                                         <a href="project-detail-1.html">
-                                            <img src="images/project-23.jpg" alt="Space Speaker Studio" />
+                                            <img src="images/PLS-Mechanical-UV-Germicide 1.jpg" alt="Space Speaker Studio" />
                                         </a>
                                     </figure>
                                     <span class="add">Kharkiv , ukraine</span>
@@ -438,9 +438,10 @@
                                     <div class="media__content">
                                         <div class="pointer"></div>
                                         <h4 class="title-sub title-sub--c8">architecture</h4>
-                                        <h2 class="title-3">Space Speaker Studio</h2>
-                                        <p class="media__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque still laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi arch sat itecto beatae vitae dicta sunt
-                                            explicabo.</p>
+                                        <h2 class="title-3">Germicidal UV</h2>
+                                        <p class="media__text">Best-in-class, Maximum-intensity ultraviolet light that reduces the concentrations of microorganisms such as pathogens, mildew, bacteria, viruses, and mold. </p>
+                                            <p>&emsp; • 100% Ozone-free</p>
+                                            <p>&emsp; • Ductless compatible</p>
                                         <a class="au-btn au-btn--arrow" href="project-detail-1.html">See Project
                                             <i class="zmdi zmdi-arrow-right ic-arrow"></i>
                                         </a>
@@ -460,7 +461,7 @@
                                 <div class="media__body">
                                     <figure class="media__img">
                                         <a href="project-detail-1.html">
-                                            <img src="images/project-24.jpg" alt="Lunisolar Homestay" />
+                                            <img src="images/Bacterias.png" alt="Lunisolar Homestay" />
                                         </a>
                                     </figure>
                                     <span class="add">Perth , Australia</span>
@@ -468,9 +469,10 @@
                                     <div class="media__content">
                                         <div class="pointer"></div>
                                         <h4 class="title-sub title-sub--c8">architecture</h4>
-                                        <h2 class="title-3">Lunisolar Homestay</h2>
-                                        <p class="media__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque still laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi arch sat itecto beatae vitae dicta sunt
-                                            explicabo.</p>
+                                        <h2 class="title-3">Active Sanitization</h2>
+                                        <p class="media__text">Inexpensively avoid heat buildup with any of the following solutions:</p>
+                                        <p>&emsp; • Combine a whole house fans with ceiling fans and window fans to circulate the air in your home</p>
+                                        <p>&emsp; • Repurpose the ducts of your central heating and cooling system to provide whole house cooling.</p>
                                         <a class="au-btn au-btn--arrow" href="project-detail-1.html">See Project
                                             <i class="zmdi zmdi-arrow-right ic-arrow"></i>
                                         </a>
@@ -490,7 +492,7 @@
                                 <div class="media__body">
                                     <figure class="media__img">
                                         <a href="project-detail-1.html">
-                                            <img src="images/project-25.jpg" alt="B.o.x Studio" />
+                                            <img src="images/PLS-Mechanical-HEPA-Filters 2.png" alt="filters" />
                                         </a>
                                     </figure>
                                     <span class="add">Bilbao , Spain</span>
@@ -498,9 +500,10 @@
                                     <div class="media__content">
                                         <div class="pointer"></div>
                                         <h4 class="title-sub title-sub--c8">architecture</h4>
-                                        <h2 class="title-3">B.o.x Studio</h2>
-                                        <p class="media__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque still laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi arch sat itecto beatae vitae dicta sunt
-                                            explicabo.</p>
+                                        <h2 class="title-3">Filters and Purifiers</h2>
+                                        <p class="media__text">Best-in-class, Maximum-intensity ultraviolet light that reduces the concentrations of microorganisms such as pathogens, mildew, bacteria, viruses, and mold.</p>
+                                        <p>&emsp; • - 100% Ozone-free</p>
+                                        <p>&emsp; • - Ductless compatible</p>
                                         <a class="au-btn au-btn--arrow" href="project-detail-1.html">See Project
                                             <i class="zmdi zmdi-arrow-right ic-arrow"></i>
                                         </a>
@@ -520,7 +523,7 @@
                                 <div class="media__body">
                                     <figure class="media__img">
                                         <a href="project-detail-1.html">
-                                            <img src="images/project-26.jpg" alt="Tourliver University" />
+                                            <img src="images/PLS-Mechanical-UV-Germicide 2.jpg" alt="Tourliver University" />
                                         </a>
                                     </figure>
                                     <span class="add">samara , rusia</span>
@@ -528,9 +531,10 @@
                                     <div class="media__content">
                                         <div class="pointer"></div>
                                         <h4 class="title-sub title-sub--c8">architecture</h4>
-                                        <h2 class="title-3">Tourliver University</h2>
-                                        <p class="media__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque still laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi arch sat itecto beatae vitae dicta sunt
-                                            explicabo.</p>
+                                        <h2 class="title-3">Humidity Control</h2>
+                                        <p class="media__text">Best-in-class, Maximum-intensity ultraviolet light that reduces the concentrations of microorganisms such as pathogens, mildew, bacteria, viruses, and mold.</p>
+                                        <p>&emsp; • - 100% Ozone-free</p>
+                                        <p>&emsp; • - Ductless compatible</p>
                                         <a class="au-btn au-btn--arrow" href="project-detail-1.html">See Project
                                             <i class="zmdi zmdi-arrow-right ic-arrow"></i>
                                         </a>
@@ -542,65 +546,6 @@
                 </section>
                 <!-- END PROJECT-->
 
-                <!-- PROJECT-->
-                <section class="project-section">
-                    <div class="wrap wrap--w1790">
-                        <div class="container-fluid">
-                            <article class="media-project-3">
-                                <div class="media__body">
-                                    <figure class="media__img">
-                                        <a href="project-detail-1.html">
-                                            <img src="images/project-27.jpg" alt="Moutain home" />
-                                        </a>
-                                    </figure>
-                                    <span class="add">Canada , usa</span>
-                                    <span class="year">2018</span>
-                                    <div class="media__content">
-                                        <div class="pointer"></div>
-                                        <h4 class="title-sub title-sub--c8">architecture</h4>
-                                        <h2 class="title-3">Moutain home</h2>
-                                        <p class="media__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque still laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi arch sat itecto beatae vitae dicta sunt
-                                            explicabo.</p>
-                                        <a class="au-btn au-btn--arrow" href="project-detail-1.html">See Project
-                                            <i class="zmdi zmdi-arrow-right ic-arrow"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                            </article>
-                        </div>
-                    </div>
-                </section>
-                <!-- END PROJECT-->
-
-                <!-- PROJECT-->
-                <section class="project-section">
-                    <div class="wrap wrap--w1790">
-                        <div class="container-fluid">
-                            <article class="media-project-3 right">
-                                <div class="media__body">
-                                    <figure class="media__img">
-                                        <a href="project-detail-1.html">
-                                            <img src="images/project-28.jpg" alt="Blink Villa" />
-                                        </a>
-                                    </figure>
-                                    <span class="add">samara , rusia</span>
-                                    <span class="year">2018</span>
-                                    <div class="media__content">
-                                        <div class="pointer"></div>
-                                        <h4 class="title-sub title-sub--c8">architecture</h4>
-                                        <h2 class="title-3">Blink Villa</h2>
-                                        <p class="media__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque still laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi arch sat itecto beatae vitae dicta sunt
-                                            explicabo.</p>
-                                        <a class="au-btn au-btn--arrow" href="project-detail-1.html">See Project
-                                            <i class="zmdi zmdi-arrow-right ic-arrow"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                            </article>
-                        </div>
-                    </div>
-                </section>
-                <!-- END PROJECT-->
                 <!-- FOOTER-->
                 <footer class="footer bg-parallax">
                     <div class="bg-overlay bg-overlay--p85"></div> 
