--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Tatee Theme Templates">
 
     <!-- Title Page-->
-    <title>Contact</title>
+    <title>Terms of Service</title>
 
     <!-- Icons font CSS-->
     <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
@@ -44,7 +44,7 @@
         <!-- HEADER-->
         <header id="header">
             <div class="header header-2 d-none d-lg-block">
-                <div class="header__bar bg-overlay bg-overlay--p85"> 
+                <div class="header__bar bg-overlay bg-overlay--p85" id="header-bg-default"> 
                     <div class="wrap wrap--w1790">
                         <div class="container-fluid">
                             <div class="header__content">
@@ -274,74 +274,80 @@
         <!-- END HEADER-->
 
         <!-- MAIN-->
-        <main id="main">
-            <!-- PAGE LINE-->
-            <div class="page-line">
-                <div class="container">
-                    <div class="page-line__inner">
-                        <div class="page-col"></div>
-                        <div class="page-col"></div>
-                        <div class="page-col"></div>
-                    </div>
-                </div>
-            </div>
-            <!-- END PAGE LINE-->
-
+        <main id="main" class="tos">
+            <img src="./images/black-default-bg.png" alt="black-default-bg" class="black-default-bg">
             <!-- PAGE HEADING-->
             <section class="section p-t-100 p-b-65">
                 <div class="container">
                     <div class="page-heading">
-                        <h4 class="title-sub title-sub--c8 m-b-15">Let’s work with us</h4>
-                        <h2 class="title-2">Together we can make dream come true</h2>
+                        <h2 class="title-2">Terms of Service</h2>
+                        <h4 class="title-sub title-sub--c8 m-b-15">Last updated December 2023</h4>
                     </div>
                 </div>
             </section>
             <!-- END PAGE HEADING-->
 
-            <!-- CONTACT-->
+            <!-- TERMS OF SERVICES-->
             <section class="section p-b-80">
                 <div class="container">
-                    <div class="map-wrapper js-google-map m-b-60" data-makericon="images/icon/marker.png" data-makers="[[&quot;TATEE&quot;, &quot;Now that you visited our website,&lt;br&gt; how about checking out our office too?&quot;, 40.715681, -74.003427]]">
-                        <div class="map__holder js-map-holder" id="map" style="height: 370px;"></div>
-                    </div>
-                    <div class="row no-gutters">
-                        <div class="col-lg-4">
-                            <div class="contact-info">
-                                <div class="contact-info__item">
-                                    <h5 class="title--sm2">Address:</h5>
-                                    <p class="value">2300 Marcus Ave, Lake Success, NY 11042</p>
-                                </div>
-                                <div class="contact-info__item">
-                                    <h5 class="title--sm2">Phone Number:</h5>
-                                    <p class="value">+ (516) 697-6100</p>
-                                </div>
-                                <div class="contact-info__item">
-                                    <h5 class="title--sm2">Email:</h5>
-                                    <p class="value">info@plsmechanical.com</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-8">
-                            <form class="form-contact js-contact-form" method="POST" action="#">
-                                <div class="form-row no-gutters">
-                                    <div class="col-md-6">
-                                        <input class="au-input" type="text" name="name" placeholder="Name" required="required">
-                                        <input class="au-input" type="email" name="email" placeholder="Email Address" required="required" pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}">
-                                        <input class="au-input" type="text" name="phone" placeholder="Phone" required="required">
-                                    </div>
-                                    <div class="col-md-6 p-r-0">
-                                        <textarea class="au-textarea" name="message" placeholder="Message*" required="required"></textarea>
-                                        <div class="text-right">
-                                            <button class="au-btn au-btn--solid" type="submit">Send message</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
+                    <div id="tos-content">
+                        <ul>
+                            <li>
+                                <h4>1. Terms</h4>
+                                <p>By accessing this Website, accessible from plsmechanical.com, you are agreeing to be bound by these Website Terms and Conditions of Use and agree that you are responsible for the agreement with any applicable local laws. If you disagree with any of these terms, you are prohibited from accessing this site. The materials contained in this Website are protectted by copyright and trade mark law.</p>
+                            </li>
+                            <br>
+                            <li>
+                                <h4>2. Use License</h4>
+                                <p>Permission is granted to temporarily download one copy of the materials on PLS Mechanical's Website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:</p>
+                                <br>
+
+                                    <p>&emsp; • modify or copy the materials;
+                                    <p>&emsp; • use the materials for any commercial purpose or for any public display;</p>
+                                    <p>&emsp; • attempt to reverse engineer any software contained on PLS Mechanical's Website;</p>
+                                    <p>&emsp; • remove any copyright or other proprietary notations from the materials; or</p>
+                                    <p>&emsp; • transferring the materials to another person or "mirror" the materials on any other server.</p>
+                                    <br>
+
+                                <p>This will let PLS Mechanical to terminate upon violations of any of these restrictions. Upon termination, your viewing right will also be terminated and you should destroy any downloaded materials in your possession whether it is printed or electronic format. These Terms of Service has been created with the help of the Terms Of Service Generator.</p>
+                            </li>
+                            <br>
+                            <li>
+                                <h4>3. Disclaimer</h4>
+                                <p>All the materials on PLS Mechanical’s Website are provided "as is". PLS Mechanical makes no warranties, may it be expressed or implied, therefore negates all other warranties. Furthermore, PLS Mechanical does not make any representations concerning the accuracy or reliability of the use of the materials on its Website or otherwise relating to such materials or any sites linked to this Website.</p>
+                            </li>
+                            <br>
+                            <li>
+                                <h4>4. Limitations</h4>
+                                <p>PLS Mechanical or its suppliers will not be hold accountable for any damages that will arise with the use or inability to use the materials on PLS Mechanical’s Website, even if PLS Mechanical or an authorize representative of this Website has been notified, orally or written, of the possibility of such damage. Some jurisdiction does not allow limitations on implied warranties or limitations of liability for incidental damages, these limitations may not apply to you.</p>
+                            </li>
+                            <br>
+                            <li>
+                                <h4>5. Revisions and Errata</h4>
+                                <p>The materials appearing on PLS Mechanical’s Website may include technical, typographical, or photographic errors. PLS Mechanical will not promise that any of the materials in this Website are accurate, complete, or current. PLS Mechanical may change the materials contained on its Website at any time without notice. PLS Mechanical does not make any commitment to update the materials.</p>
+                            </li>
+                            <br>
+                            <li>
+                                <h4>6. Links</h4>
+                                <p>PLS Mechanical has not reviewed all of the sites linked to its Website and is not responsible for the contents of any such linked site. The presence of any link does not imply endorsement by PLS Mechanical of the site. The use of any linked website is at the user’s own risk.</p>
+                            </li>
+                            <br>
+                            <li>
+                                <h4>7. Site Terms of Use Modifications</h4>
+                                <p>PLS Mechanical may revise these Terms of Use for its Website at any time without prior notice. By using this Website, you are agreeing to be bound by the current version of these Terms and Conditions of Use. </p>
+                                <p>Please read our <a href="#">Privacy Policy</a></p>
+                            </li>
+                            <br>
+                            <li>
+                                <h4>8. Governing Law</h4>
+                                <p>Any claim related to PLS Mechanical's Website shall be governed by the laws of us without regards to its conflict of law provisions.</p>
+                            </li>
+                            <br>
+                        </ul>
                     </div>
                 </div>
             </section>
-            <!-- END CONTACT-->
+            <!-- END TERMS OF SERVICES-->
         </main>
         <!-- END MAIN-->
 
